# cpp-custom-imgprocess-opencv

./: .gitignore  CMakeLists.txt
demo/: demo1.cpp
include/: draw_custom_line.hpp
src/: draw_custom_line.cpp
tools/: vector_creation_routines.cpp  vector_creation_routines.hpp
